Closed
Bug 361016
Opened 19 years ago
Closed 19 years ago
Needed an alternate command to zoom to "maximize to fill screen"
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.5
People
(Reporter: nospam, Assigned: froodian)
Details
(Keywords: fixed1.8.1.1)
Attachments
(1 file)
|
1.34 KB,
patch
|
torben
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.8.1) Gecko/20061115 Camino/1.1a1+ (jedik)
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.8.1) Gecko/20061115 Camino/1.1a1+
Since bug 155956 has landed there is no way to revert to the previous behavior (i.e. maximize to fill screen) when using the zoom widget on menu command. Some programs offer this feature if the OPTION (or SHIFT) key is pressed in both cases.
Reproducible: Always
The OPTION key is now used as a modifier for "Zoom All" windows, so maybe the SHIFT key should be used to "zoom to fill screen".
> maybe the SHIFT key should be used to "zoom to fill screen".
This should be a trivial fix. If no one is strongly opposed I'll fix this as soon as I'm finnished debugging some of the other zoom-bugs.
Assignee: nobody → torben
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Mac OS X 10.4 → Mac OS X 10.3
Target Milestone: --- → Camino1.1
| Assignee | ||
Comment 2•19 years ago
|
||
Hi Torben,
Hope you don't mind me taking this one, just figured I'd get it out of the way and leave your time for the real bugs. ;)
| Assignee | ||
Updated•19 years ago
|
Attachment #247462 -
Flags: review? → review?(torben)
Comment on attachment 247462 [details] [diff] [review]
Patch
r=me provided that you tested this thoroughly (my build is busted ATM :-( )
Attachment #247462 -
Flags: superreview?(mikepinkerton)
Attachment #247462 -
Flags: review?(torben)
Attachment #247462 -
Flags: review+
Comment 4•19 years ago
|
||
Comment on attachment 247462 [details] [diff] [review]
Patch
sr=pink
Attachment #247462 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 5•19 years ago
|
||
Checked in on 1.8branch and trunk
You need to log in
before you can comment on or make changes to this bug.
Description
•