Camino only - bug 361016: Make zoom widget maximize to fill screen when shift is held. r=torben sr=pink